crates/rome_formatter/tests/specs/prettier/comments-pipeline-own-line/pipeline_own_line.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: pipeline_own_line.js

---
# Input
```js
function pipeline() {
	0
	// Comment
	|> x
}

bifornCringerMoshedPerplexSawder(
  askTrovenaBeenaDependsRowans,
  glimseGlyphsHazardNoopsTieTie,
  averredBathersBoxroomBuggyNurl
) // comment
|> kochabCooieGameOnOboleUnweave
|> glimseGlyphsHazardNoopsTieTie;

bifornCringerMoshedPerplexSawder(
  askTrovenaBeenaDependsRowans,
  glimseGlyphsHazardNoopsTieTie
)
|> foo // comment
|> kochabCooieGameOnOboleUnweave
|> glimseGlyphsHazardNoopsTieTie;

bifornCringerMoshedPerplexSawder[
  askTrovenaBeenaDependsRowans +
  glimseGlyphsHazardNoopsTieTie +
  averredBathersBoxroomBuggyNurl
] // comment
|> kochabCooieGameOnOboleUnweave
|> glimseGlyphsHazardNoopsTieTie;

bifornCringerMoshedPerplexSawder[
  askTrovenaBeenaDependsRowans +
  glimseGlyphsHazardNoopsTieTie +
  averredBathersBoxroomBuggyNurl
]
|> foo // comment
|> kochabCooieGameOnOboleUnweave
|> glimseGlyphsHazardNoopsTieTie;

```

# Output
```js
function pipeline() {
  0
	// Comment
	|> x
}

bifornCringerMoshedPerplexSawder(
  askTrovenaBeenaDependsRowans,
  glimseGlyphsHazardNoopsTieTie,
  averredBathersBoxroomBuggyNurl
) // comment
|> kochabCooieGameOnOboleUnweave
|> glimseGlyphsHazardNoopsTieTie;

bifornCringerMoshedPerplexSawder(
  askTrovenaBeenaDependsRowans,
  glimseGlyphsHazardNoopsTieTie
)
|> foo // comment
|> kochabCooieGameOnOboleUnweave
|> glimseGlyphsHazardNoopsTieTie;

bifornCringerMoshedPerplexSawder[
  askTrovenaBeenaDependsRowans +
  glimseGlyphsHazardNoopsTieTie +
  averredBathersBoxroomBuggyNurl
] // comment
|> kochabCooieGameOnOboleUnweave
|> glimseGlyphsHazardNoopsTieTie;

bifornCringerMoshedPerplexSawder[
  askTrovenaBeenaDependsRowans +
  glimseGlyphsHazardNoopsTieTie +
  averredBathersBoxroomBuggyNurl
]
|> foo // comment
|> kochabCooieGameOnOboleUnweave
|> glimseGlyphsHazardNoopsTieTie;

```

# Errors
```
error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
  ┌─ pipeline_own_line.js:4:3
  │
4 │     |> x
  │     -^ But this operator was encountered instead
  │     │ 
  │     This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ pipeline_own_line.js:12:2
   │
12 │ |> kochabCooieGameOnOboleUnweave
   │ -^ But this operator was encountered instead
   │ │ 
   │ This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ pipeline_own_line.js:13:2
   │
13 │ |> glimseGlyphsHazardNoopsTieTie;
   │ -^ But this operator was encountered instead
   │ │ 
   │ This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ pipeline_own_line.js:19:2
   │
19 │ |> foo // comment
   │ -^ But this operator was encountered instead
   │ │ 
   │ This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ pipeline_own_line.js:20:2
   │
20 │ |> kochabCooieGameOnOboleUnweave
   │ -^ But this operator was encountered instead
   │ │ 
   │ This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ pipeline_own_line.js:21:2
   │
21 │ |> glimseGlyphsHazardNoopsTieTie;
   │ -^ But this operator was encountered instead
   │ │ 
   │ This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ pipeline_own_line.js:28:2
   │
28 │ |> kochabCooieGameOnOboleUnweave
   │ -^ But this operator was encountered instead
   │ │ 
   │ This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ pipeline_own_line.js:29:2
   │
29 │ |> glimseGlyphsHazardNoopsTieTie;
   │ -^ But this operator was encountered instead
   │ │ 
   │ This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ pipeline_own_line.js:36:2
   │
36 │ |> foo // comment
   │ -^ But this operator was encountered instead
   │ │ 
   │ This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ pipeline_own_line.js:37:2
   │
37 │ |> kochabCooieGameOnOboleUnweave
   │ -^ But this operator was encountered instead
   │ │ 
   │ This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ pipeline_own_line.js:38:2
   │
38 │ |> glimseGlyphsHazardNoopsTieTie;
   │ -^ But this operator was encountered instead
   │ │ 
   │ This operator requires a right hand side value


```


